Replace LinkedList with ArrayList/ArrayDeque
* Avoid using LinkedList where ArrayList or ArrayDeque is more effective
  regarding runtime complexity and memory fragmentation.
* Clean up unused or redundant code related to the use of the list
  variables changed here.

Merged-by: Martin Grzenia <martin.grzenia@iml.fraunhofer.de>